maven-project/src/main/antlr4/epp/.antlr/EPPParser.java
// Generated from /Users/adrianmoralesrodriguez/Documents/Universidad/Procesadores del Lenguaje/compiladores-pl3/maven-project/src/main/antlr4/epp/EPPParser.g4 by ANTLR 4.13.1
 package epp; 
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class EPPParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		ASIGNAR=1, MOSTRAR=2, LEER=3, MIENTRAS=4, SI=5, NO=6, TERMINAR=7, FLECHA=8, 
		PARENIZQ=9, PARENDER=10, ASIGNACION=11, CONDICION=12, FINLINEA=13, Y_LOGICO=14, 
		O_LOGICO=15, NO_LOGICO=16, MAS=17, MENOS=18, POR=19, DIV=20, MOD=21, MAYOR=22, 
		MENOR=23, IGUAL=24, DIFERENTE=25, MAYORIGUAL=26, MENORIGUAL=27, NUM=28, 
		STRING=29, VERDADERO=30, FALSO=31, VARIABLE=32, COMENTARIO=33, WS=34;
	public static final int
		RULE_programa = 0, RULE_instruccion = 1, RULE_asignacion = 2, RULE_mostrar = 3, 
		RULE_leer = 4, RULE_mientras = 5, RULE_condicional = 6, RULE_bloque = 7, 
		RULE_comentario = 8, RULE_expresionBooleana = 9, RULE_expresionComparable = 10, 
		RULE_expresion = 11, RULE_expresionAritmetica = 12, RULE_expresionAritmeticaPrimaria = 13, 
		RULE_expresionPrimaria = 14, RULE_operadorComparacion = 15, RULE_operadorAditivo = 16, 
		RULE_operadorMultiplicativo = 17;
	private static String[] makeRuleNames() {
		return new String[] {
			"programa", "instruccion", "asignacion", "mostrar", "leer", "mientras", 
			"condicional", "bloque", "comentario", "expresionBooleana", "expresionComparable", 
			"expresion", "expresionAritmetica", "expresionAritmeticaPrimaria", "expresionPrimaria", 
			"operadorComparacion", "operadorAditivo", "operadorMultiplicativo"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'asignar'", "'mostrar'", "'leer'", "'mientras'", "'si'", "'no'", 
			"'terminar'", "'->'", "'('", "')'", "'='", "'???'", "';P'", "'y'", "'o'", 
			"'no_es'", "'+'", "'-'", "'*'", "'/'", "'%'", "'>'", "'<'", "'=='", "'!='", 
			"'>='", "'<='", null, null, "'verdadero'", "'falso'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "ASIGNAR", "MOSTRAR", "LEER", "MIENTRAS", "SI", "NO", "TERMINAR", 
			"FLECHA", "PARENIZQ", "PARENDER", "ASIGNACION", "CONDICION", "FINLINEA", 
			"Y_LOGICO", "O_LOGICO", "NO_LOGICO", "MAS", "MENOS", "POR", "DIV", "MOD", 
			"MAYOR", "MENOR", "IGUAL", "DIFERENTE", "MAYORIGUAL", "MENORIGUAL", "NUM", 
			"STRING", "VERDADERO", "FALSO", "VARIABLE", "COMENTARIO", "WS"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "EPPParser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public EPPParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ProgramaContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(EPPParser.EOF, 0); }
		public List<InstruccionContext> instruccion() {
			return getRuleContexts(InstruccionContext.class);
		}
		public InstruccionContext instruccion(int i) {
			return getRuleContext(InstruccionContext.class,i);
		}
		public List<ComentarioContext> comentario() {
			return getRuleContexts(ComentarioContext.class);
		}
		public ComentarioContext comentario(int i) {
			return getRuleContext(ComentarioContext.class,i);
		}
		public ProgramaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_programa; }
	}

	public final ProgramaContext programa() throws RecognitionException {
		ProgramaContext _localctx = new ProgramaContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_programa);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(40);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 16911499806L) != 0)) {
				{
				setState(38);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case ASIGNAR:
				case MOSTRAR:
				case LEER:
				case MIENTRAS:
				case PARENIZQ:
				case NO_LOGICO:
				case NUM:
				case STRING:
				case VERDADERO:
				case FALSO:
				case VARIABLE:
					{
					setState(36);
					instruccion();
					}
					break;
				case COMENTARIO:
					{
					setState(37);
					comentario();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				setState(42);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(43);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class InstruccionContext extends ParserRuleContext {
		public AsignacionContext asignacion() {
			return getRuleContext(AsignacionContext.class,0);
		}
		public MostrarContext mostrar() {
			return getRuleContext(MostrarContext.class,0);
		}
		public CondicionalContext condicional() {
			return getRuleContext(CondicionalContext.class,0);
		}
		public LeerContext leer() {
			return getRuleContext(LeerContext.class,0);
		}
		public MientrasContext mientras() {
			return getRuleContext(MientrasContext.class,0);
		}
		public InstruccionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_instruccion; }
	}

	public final InstruccionContext instruccion() throws RecognitionException {
		InstruccionContext _localctx = new InstruccionContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_instruccion);
		try {
			setState(50);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case ASIGNAR:
				enterOuterAlt(_localctx, 1);
				{
				setState(45);
				asignacion();
				}
				break;
			case MOSTRAR:
				enterOuterAlt(_localctx, 2);
				{
				setState(46);
				mostrar();
				}
				break;
			case PARENIZQ:
			case NO_LOGICO:
			case NUM:
			case STRING:
			case VERDADERO:
			case FALSO:
			case VARIABLE:
				enterOuterAlt(_localctx, 3);
				{
				setState(47);
				condicional();
				}
				break;
			case LEER:
				enterOuterAlt(_localctx, 4);
				{
				setState(48);
				leer();
				}
				break;
			case MIENTRAS:
				enterOuterAlt(_localctx, 5);
				{
				setState(49);
				mientras();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class AsignacionContext extends ParserRuleContext {
		public TerminalNode ASIGNAR() { return getToken(EPPParser.ASIGNAR, 0); }
		public TerminalNode VARIABLE() { return getToken(EPPParser.VARIABLE, 0); }
		public TerminalNode ASIGNACION() { return getToken(EPPParser.ASIGNACION, 0); }
		public ExpresionContext expresion() {
			return getRuleContext(ExpresionContext.class,0);
		}
		public TerminalNode FINLINEA() { return getToken(EPPParser.FINLINEA, 0); }
		public AsignacionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_asignacion; }
	}

	public final AsignacionContext asignacion() throws RecognitionException {
		AsignacionContext _localctx = new AsignacionContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_asignacion);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(52);
			match(ASIGNAR);
			setState(53);
			match(VARIABLE);
			setState(54);
			match(ASIGNACION);
			setState(55);
			expresion(0);
			setState(56);
			match(FINLINEA);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class MostrarContext extends ParserRuleContext {
		public TerminalNode MOSTRAR() { return getToken(EPPParser.MOSTRAR, 0); }
		public ExpresionContext expresion() {
			return getRuleContext(ExpresionContext.class,0);
		}
		public TerminalNode FINLINEA() { return getToken(EPPParser.FINLINEA, 0); }
		public MostrarContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_mostrar; }
	}

	public final MostrarContext mostrar() throws RecognitionException {
		MostrarContext _localctx = new MostrarContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_mostrar);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(58);
			match(MOSTRAR);
			setState(59);
			expresion(0);
			setState(60);
			match(FINLINEA);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class LeerContext extends ParserRuleContext {
		public TerminalNode LEER() { return getToken(EPPParser.LEER, 0); }
		public TerminalNode VARIABLE() { return getToken(EPPParser.VARIABLE, 0); }
		public TerminalNode FINLINEA() { return getToken(EPPParser.FINLINEA, 0); }
		public LeerContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_leer; }
	}

	public final LeerContext leer() throws RecognitionException {
		LeerContext _localctx = new LeerContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_leer);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(62);
			match(LEER);
			setState(63);
			match(VARIABLE);
			setState(64);
			match(FINLINEA);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class MientrasContext extends ParserRuleContext {
		public TerminalNode MIENTRAS() { return getToken(EPPParser.MIENTRAS, 0); }
		public TerminalNode PARENIZQ() { return getToken(EPPParser.PARENIZQ, 0); }
		public ExpresionBooleanaContext expresionBooleana() {
			return getRuleContext(ExpresionBooleanaContext.class,0);
		}
		public TerminalNode PARENDER() { return getToken(EPPParser.PARENDER, 0); }
		public TerminalNode FLECHA() { return getToken(EPPParser.FLECHA, 0); }
		public BloqueContext bloque() {
			return getRuleContext(BloqueContext.class,0);
		}
		public TerminalNode TERMINAR() { return getToken(EPPParser.TERMINAR, 0); }
		public MientrasContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_mientras; }
	}

	public final MientrasContext mientras() throws RecognitionException {
		MientrasContext _localctx = new MientrasContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_mientras);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(66);
			match(MIENTRAS);
			setState(67);
			match(PARENIZQ);
			setState(68);
			expresionBooleana(0);
			setState(69);
			match(PARENDER);
			setState(70);
			match(FLECHA);
			setState(71);
			bloque();
			setState(72);
			match(TERMINAR);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class CondicionalContext extends ParserRuleContext {
		public ExpresionBooleanaContext expresionBooleana() {
			return getRuleContext(ExpresionBooleanaContext.class,0);
		}
		public TerminalNode CONDICION() { return getToken(EPPParser.CONDICION, 0); }
		public TerminalNode SI() { return getToken(EPPParser.SI, 0); }
		public List<TerminalNode> FLECHA() { return getTokens(EPPParser.FLECHA); }
		public TerminalNode FLECHA(int i) {
			return getToken(EPPParser.FLECHA, i);
		}
		public List<BloqueContext> bloque() {
			return getRuleContexts(BloqueContext.class);
		}
		public BloqueContext bloque(int i) {
			return getRuleContext(BloqueContext.class,i);
		}
		public TerminalNode TERMINAR() { return getToken(EPPParser.TERMINAR, 0); }
		public TerminalNode NO() { return getToken(EPPParser.NO, 0); }
		public CondicionalContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_condicional; }
	}

	public final CondicionalContext condicional() throws RecognitionException {
		CondicionalContext _localctx = new CondicionalContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_condicional);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(74);
			expresionBooleana(0);
			setState(75);
			match(CONDICION);
			setState(76);
			match(SI);
			setState(77);
			match(FLECHA);
			setState(78);
			bloque();
			setState(82);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==NO) {
				{
				setState(79);
				match(NO);
				setState(80);
				match(FLECHA);
				setState(81);
				bloque();
				}
			}

			setState(84);
			match(TERMINAR);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class BloqueContext extends ParserRuleContext {
		public List<InstruccionContext> instruccion() {
			return getRuleContexts(InstruccionContext.class);
		}
		public InstruccionContext instruccion(int i) {
			return getRuleContext(InstruccionContext.class,i);
		}
		public List<ComentarioContext> comentario() {
			return getRuleContexts(ComentarioContext.class);
		}
		public ComentarioContext comentario(int i) {
			return getRuleContext(ComentarioContext.class,i);
		}
		public BloqueContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_bloque; }
	}

	public final BloqueContext bloque() throws RecognitionException {
		BloqueContext _localctx = new BloqueContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_bloque);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(90);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 16911499806L) != 0)) {
				{
				setState(88);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case ASIGNAR:
				case MOSTRAR:
				case LEER:
				case MIENTRAS:
				case PARENIZQ:
				case NO_LOGICO:
				case NUM:
				case STRING:
				case VERDADERO:
				case FALSO:
				case VARIABLE:
					{
					setState(86);
					instruccion();
					}
					break;
				case COMENTARIO:
					{
					setState(87);
					comentario();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				setState(92);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ComentarioContext extends ParserRuleContext {
		public TerminalNode COMENTARIO() { return getToken(EPPParser.COMENTARIO, 0); }
		public ComentarioContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_comentario; }
	}

	public final ComentarioContext comentario() throws RecognitionException {
		ComentarioContext _localctx = new ComentarioContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_comentario);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(93);
			match(COMENTARIO);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ExpresionBooleanaContext extends ParserRuleContext {
		public ExpresionBooleanaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_expresionBooleana; }
	 
		public ExpresionBooleanaContext() { }
		public void copyFrom(ExpresionBooleanaContext ctx) {
			super.copyFrom(ctx);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class ExprBooleanaAndContext extends ExpresionBooleanaContext {
		public List<ExpresionBooleanaContext> expresionBooleana() {
			return getRuleContexts(ExpresionBooleanaContext.class);
		}
		public ExpresionBooleanaContext expresionBooleana(int i) {
			return getRuleContext(ExpresionBooleanaContext.class,i);
		}
		public TerminalNode Y_LOGICO() { return getToken(EPPParser.Y_LOGICO, 0); }
		public ExprBooleanaAndContext(ExpresionBooleanaContext ctx) { copyFrom(ctx); }
	}
	@SuppressWarnings("CheckReturnValue")
	public static class ExprBooleanaFalsoContext extends ExpresionBooleanaContext {
		public TerminalNode FALSO() { return getToken(EPPParser.FALSO, 0); }
		public ExprBooleanaFalsoContext(ExpresionBooleanaContext ctx) { copyFrom(ctx); }
	}
	@SuppressWarnings("CheckReturnValue")
	public static class ExprBooleanaVerdaderoContext extends ExpresionBooleanaContext {
		public TerminalNode VERDADERO() { return getToken(EPPParser.VERDADERO, 0); }
		public ExprBooleanaVerdaderoContext(ExpresionBooleanaContext ctx) { copyFrom(ctx); }
	}
	@SuppressWarnings("CheckReturnValue")
	public static class ExprBooleanaOrContext extends ExpresionBooleanaContext {
		public List<ExpresionBooleanaContext> expresionBooleana() {
			return getRuleContexts(ExpresionBooleanaContext.class);
		}
		public ExpresionBooleanaContext expresionBooleana(int i) {
			return getRuleContext(ExpresionBooleanaContext.class,i);
		}
		public TerminalNode O_LOGICO() { return getToken(EPPParser.O_LOGICO, 0); }
		public ExprBooleanaOrContext(ExpresionBooleanaContext ctx) { copyFrom(ctx); }
	}
	@SuppressWarnings("CheckReturnValue")
	public static class ExprBooleanaParentesisContext extends ExpresionBooleanaContext {
		public TerminalNode PARENIZQ() { return getToken(EPPParser.PARENIZQ, 0); }
		public ExpresionBooleanaContext expresionBooleana() {
			return getRuleContext(ExpresionBooleanaContext.class,0);
		}
		public TerminalNode PARENDER() { return getToken(EPPParser.PARENDER, 0); }
		public ExprBooleanaParentesisContext(ExpresionBooleanaContext ctx) { copyFrom(ctx); }
	}
	@SuppressWarnings("CheckReturnValue")
	public static class ExprBooleanaComparacionContext extends ExpresionBooleanaContext {
		public List<ExpresionComparableContext> expresionComparable() {
			return getRuleContexts(ExpresionComparableContext.class);
		}
		public ExpresionComparableContext expresionComparable(int i) {
			return getRuleContext(ExpresionComparableContext.class,i);
		}
		public OperadorComparacionContext operadorComparacion() {
			return getRuleContext(OperadorComparacionContext.class,0);
		}
		public ExprBooleanaComparacionContext(ExpresionBooleanaContext ctx) { copyFrom(ctx); }
	}
	@SuppressWarnings("CheckReturnValue")
	public static class ExprBooleanaNotContext extends ExpresionBooleanaContext {
		public TerminalNode NO_LOGICO() { return getToken(EPPParser.NO_LOGICO, 0); }
		public ExpresionBooleanaContext expresionBooleana() {
			return getRuleContext(ExpresionBooleanaContext.class,0);
		}
		public ExprBooleanaNotContext(ExpresionBooleanaContext ctx) { copyFrom(ctx); }
	}

	public final ExpresionBooleanaContext expresionBooleana() throws RecognitionException {
		return expresionBooleana(0);
	}

	private ExpresionBooleanaContext expresionBooleana(int _p) throws RecognitionException {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = getState();
		ExpresionBooleanaContext _localctx = new ExpresionBooleanaContext(_ctx, _parentState);
		ExpresionBooleanaContext _prevctx = _localctx;
		int _startState = 18;
		enterRecursionRule(_localctx, 18, RULE_expresionBooleana, _p);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(108);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,6,_ctx) ) {
			case 1:
				{
				_localctx = new ExprBooleanaNotContext(_localctx);
				_ctx = _localctx;
				_prevctx = _localctx;

				setState(96);
				match(NO_LOGICO);
				setState(97);
				expresionBooleana(5);
				}
				break;
			case 2:
				{
				_localctx = new ExprBooleanaComparacionContext(_localctx);
				_ctx = _localctx;
				_prevctx = _localctx;
				setState(98);
				expresionComparable();
				setState(99);
				operadorComparacion();
				setState(100);
				expresionComparable();
				}
				break;
			case 3:
				{
				_localctx = new ExprBooleanaVerdaderoContext(_localctx);
				_ctx = _localctx;
				_prevctx = _localctx;
				setState(102);
				match(VERDADERO);
				}
				break;
			case 4:
				{
				_localctx = new ExprBooleanaFalsoContext(_localctx);
				_ctx = _localctx;
				_prevctx = _localctx;
				setState(103);
				match(FALSO);
				}
				break;
			case 5:
				{
				_localctx = new ExprBooleanaParentesisContext(_localctx);
				_ctx = _localctx;
				_prevctx = _localctx;
				setState(104);
				match(PARENIZQ);
				setState(105);
				expresionBooleana(0);
				setState(106);
				match(PARENDER);
				}
				break;
			}
			_ctx.stop = _input.LT(-1);
			setState(118);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,8,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					if ( _parseListeners!=null ) triggerExitRuleEvent();
					_prevctx = _localctx;
					{
					setState(116);
					_errHandler.sync(this);
					switch ( getInterpreter().adaptivePredict(_input,7,_ctx) ) {
					case 1:
						{
						_localctx = new ExprBooleanaOrContext(new ExpresionBooleanaContext(_parentctx, _parentState));
						pushNewRecursionContext(_localctx, _startState, RULE_expresionBooleana);
						setState(110);
						if (!(precpred(_ctx, 7))) throw new FailedPredicateException(this, "precpred(_ctx, 7)");
						setState(111);
						match(O_LOGICO);
						setState(112);
						expresionBooleana(8);
						}
						break;
					case 2:
						{
						_localctx = new ExprBooleanaAndContext(new ExpresionBooleanaContext(_parentctx, _parentState));
						pushNewRecursionContext(_localctx, _startState, RULE_expresionBooleana);
						setState(113);
						if (!(precpred(_ctx, 6))) throw new FailedPredicateException(this, "precpred(_ctx, 6)");
						setState(114);
						match(Y_LOGICO);
						setState(115);
						expresionBooleana(7);
						}
						break;
					}
					} 
				}
				setState(120);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,8,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			unrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}
